<resources>
    <string name="app_name">DiabeTool</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_main">Main chart</string>
    <string name="menu_alarms">Alarms</string>
    <string name="menu_backup">Backup</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_status">Status</string>
</resources>