<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:title="@string/menu_main" />
        <item
            android:id="@+id/nav_alarms"
            android:title="@string/menu_alarms" />
        <item
            android:id="@+id/nav_backup"
            android:title="@string/menu_backup" />
        <item
            android:id="@+id/nav_history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_settings"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_statistics"
            android:title="@string/menu_statistics" />
        <item
            android:id="@+id/nav_status"
            android:title="@string/menu_status" />
    </group>
</menu>