<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_main">

    <fragment
        android:id="@+id/nav_main"
        android:name="com.kukuchta.diabetool.presentation.main.MainFragment"
        android:label="@string/menu_main"
        tools:layout="@layout/fragment_main" />

    <fragment
        android:id="@+id/nav_alarms"
        android:name="com.kukuchta.diabetool.presentation.alarms.AlarmsFragment"
        android:label="@string/menu_alarms"
        tools:layout="@layout/fragment_alarms" />

    <fragment
        android:id="@+id/nav_backup"
        android:name="com.kukuchta.diabetool.presentation.backup.BackupFragment"
        android:label="@string/menu_backup"
        tools:layout="@layout/fragment_backup" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.kukuchta.diabetool.presentation.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.kukuchta.diabetool.presentation.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_statistics"
        android:name="com.kukuchta.diabetool.presentation.statistics.StatisticsFragment"
        android:label="@string/menu_statistics"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/nav_status"
        android:name="com.kukuchta.diabetool.presentation.status.StatusFragment"
        android:label="@string/menu_status"
        tools:layout="@layout/fragment_status" />
</navigation>